add option to stop refresh, make bike won button better visible, add thumbsup/down icon for past races, remove bike-won button from waitlist entries, add duration to shows, add finished state to shows

--- a/ui/rl/projects/show/src/lib/edit-show/edit-show.component.html
+++ b/ui/rl/projects/show/src/lib/edit-show/edit-show.component.html
@@ -1,4 +1,7 @@
-<div *ngIf="form" [formGroup]="form">
+<div *ngIf="form && show" [formGroup]="form">
+
+  <h2>Update of Show #{{showId}} ({{show.name}})</h2>
+
   <div>
       <mat-form-field appearance="outline">
           <mat-label>Show Name</mat-label>
@@ -37,5 +40,5 @@
     </ui-button-list>
   </div>
 
-  <button mat-flat-button color="primary" [disabled]="!form.valid" (click)="createShow()">Speichern</button>
+  <button mat-flat-button color="primary" [disabled]="!form.valid" (click)="updateShow()">Speichern</button>
 </div>
