minor ui adjustment

--- a/ui/rl/projects/show/src/lib/shows/shows.component.scss
+++ b/ui/rl/projects/show/src/lib/shows/shows.component.scss
@@ -3,10 +3,10 @@
 }
 
 .finished-show {
-  background-color: #999999;
+  background-color: #cccccc;
 }
 
-.upcomming-show {
+.upcoming-show {
   background-color: #f6e6fc;
 }
 
