--- a/ui/rl/projects/views/src/lib/upcomming-races/upcomming-races.component.html
+++ b/ui/rl/projects/views/src/lib/upcomming-races/upcomming-races.component.html
@@ -10,22 +10,20 @@
       <table mat-table [dataSource]="upcommingRaces">
 
         <ng-container matColumnDef="person1">
-          <td mat-cell *matCellDef="let element"> {{element.person1}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="song1">
-          <td mat-cell *matCellDef="let element"> {{element.song1.artist}} - {{element.song1.name}} </td>
+          <td mat-cell *matCellDef="let element">
+            <div class="person person1">{{element.person1}}</div>
+            <div class="song song1">{{element.song1?.artist}} - {{element.song1?.name}}</div>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="person2">
-          <td mat-cell *matCellDef="let element"> {{element.person2}} </td>
+          <td mat-cell *matCellDef="let element">
+            <div class="person person2">{{element.person2}}</div>
+            <div class="song song2">{{element.song2?.artist}} - {{element.song2?.name}}</div>
+          </td>
         </ng-container>
 
-        <ng-container matColumnDef="song2">
-          <td mat-cell *matCellDef="let element"> {{element.song2.artist}} - {{element.song2.name}} </td>
-        </ng-container>
-
-        <tr mat-row *matRowDef="let row; columns: ['person1', 'song1', 'person2', 'song2'];"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['person1', 'person2'];"></tr>
       </table>
     </ng-container>
   </ng-container>
