--- a/ui/rl/projects/song/src/lib/duplicates/duplicates.component.html
+++ b/ui/rl/projects/song/src/lib/duplicates/duplicates.component.html
@@ -14,6 +14,7 @@
     <ng-container matColumnDef="original">
       <th mat-header-cell *matHeaderCellDef>Original</th>
       <td mat-cell *matCellDef="let element">
+        <lib-song-sync-origin [origin]="element.origin" />
         {{element.artist}} - {{element.name}}
       </td>
     </ng-container>
@@ -21,6 +22,7 @@
     <ng-container matColumnDef="duplicate">
       <th mat-header-cell *matHeaderCellDef>Duplicate</th>
       <td mat-cell *matCellDef="let element">
+        <lib-song-sync-origin [origin]="element.duplicate.origin" />
         {{element.duplicate.artist}} - {{element.duplicate.name}}
       </td>
     </ng-container>
