a lot of things

--- a/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
+++ b/ui/rl/projects/show/src/lib/show-dashboard/show-dashboard.component.html
@@ -14,7 +14,7 @@
       <button mat-flat-button color="accent" [routerLink]="'../'">
         <mat-icon>arrow_back</mat-icon>
       </button>
-      <button mat-flat-button color="accent" [routerLink]="'/shifts'">
+      <button mat-flat-button color="accent" [routerLink]="'shifts'">
         <mat-icon>groups</mat-icon>
       </button>
       <button mat-flat-button color="accent" (click)="repairOrder()">
