--- a/ui/rl/projects/users/src/lib/users/users-list/users-list.component.html
+++ b/ui/rl/projects/users/src/lib/users/users-list/users-list.component.html
@@ -1,1 +1,28 @@
-<p>users-list works!</p>
+<h2>Users</h2>
+
+<ui-button-list>
+  <button mat-flat-button color="primary" [routerLink]="'create'">Add User</button>
+</ui-button-list>
+
+<table mat-table *ngIf="users$ | async as users" [dataSource]="users" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button aria-label="Edit User" [routerLink]="'edit/' + element.id">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button aria-label="Delete User" [routerLink]="'delete/' + element.id">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="['name', 'actions']"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['name', 'actions'];"></tr>
+</table>
