--- a/ui/rl/projects/song/src/lib/songs.component.html
+++ b/ui/rl/projects/song/src/lib/songs.component.html
@@ -17,11 +17,11 @@
         <mat-icon>add</mat-icon>
         Add Song
       </button>
-      <button mat-flat-button color="primary" [routerLink]="'sync'">
+      <button mat-flat-button color="secondary" [routerLink]="'sync'">
         <mat-icon>sync</mat-icon>
         Sync Songs
       </button>
-      <button mat-flat-button color="primary" [routerLink]="'duplicates'">
+      <button mat-flat-button color="secondary" [routerLink]="'duplicates'">
         <mat-icon>difference</mat-icon>
         Find Duplicates
       </button>
