--- a/ui/rl/src/styles.scss
+++ b/ui/rl/src/styles.scss
@@ -1,5 +1,16 @@
+@use '@angular/material' as mat;
+@use './../m3-theme' as m3-theme;
+@include mat.core();
+
 /* You can add global styles to this file, and also import other style files */
 @import 'material-icons/iconfont/material-icons.css';
+
+
+html {
+  // Apply the light theme by default
+  @include mat.core-theme(m3-theme.$light-theme);
+  @include mat.button-theme(m3-theme.$light-theme);
+}
 
 html, body {
   height: 100%;
